== Version 2.0.16 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # A deep-copy bug in 'creme_core.forms.header_filter.EntityCellsField' has been fixed ;
      it could cause issues with hidden fields when editing list-views views (HeaderFilters).
    # Values of decimal CustomFields are now localized in list-views.
    # Apps :
        * Reports :
            - The export for some types of CustomField was broken (multi-enum) or not localized (datetime, bool, decimal).
            - Aggregates are now localized in exported reports.


== Version 2.0.15 ==

  Users side :
  ------------
    # Apps :
        * Persons :
            - The blocks for detailed addresses have been fixed: they did not display fields since python3 migration.
        * Billing :
            - An encoding issue in PDF export, causing error 500 on some environments, has been fixed.
        * Crudity + emails :
            - The synchronisation of e-mails was broken (encoding errors notably).


== Version 2.0.14 ==

  UPGRADE NOTE :
    - The underlying version of Django (ie: 1.11) is not supported any more by the Django's team.
      You should upgrade to Creme 2.1 which uses Django 2.2 .

  Users side :
  ------------
    # Apps :
        * Documents :
            - The label of the "Download" button in the brick for related Documents has been fixed.
        * Reports :
            - The brick of ReportGraphs has been fixed ; the 'ordinate_error' was not used.

  Developers side :
  -----------------
    Breaking changes :
    ------------------
        # The assertion in 'creme_core.forms.base.CremeEntityForm', which checks the model, has been fixed.


== Version 2.0.13 ==

  UPGRADE NOTE :
    - You should upgrade the minor version of Django 1.11 (1.11.29 or more) (eg: pip install -U django==1.11.29).
    - You should re-generate the media files (python manage.py generatemedia).

  Users side :
  ------------
    # Apps :
        * Reports :