@@ -5,6 +5,7 @@
     # A deep-copy bug in 'creme_core.forms.header_filter.EntityCellsField' has been fixed ;
       it could cause issues with hidden fields when editing list-views views (HeaderFilters).
     # Values of decimal CustomFields are now localized in list-views.
+    # The error message, when a definitive deletion fails, was partially broken.
     # Apps :
         * Reports :
             - The export for some types of CustomField was broken (multi-enum) or not localized (datetime, bool, decimal).
